Fix bugs by using span instead of buttons within input elements

--- a/test-index.html
+++ b/test-index.html
@@ -22,7 +22,7 @@
       <button>b</button>
     </div>
 
-    <script src="keyboard.js"></script>
+    <!-- <script src="keyboard.js"></script> -->
     <script>
       let button = document.getElementById("submit");
 
